k8s/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
   name: busybox
   namespace: dev
   labels:
     version: "2.0"
spec:
   containers:
   - name: busybox
     image: busybox
     command: ["/bin/sh","-c","touch /tmp/hello.txt;while true;do /bin/echo $(date +%F) >> /tmp/hello.txt;sleep 3; done;"]

   #nodeSelector: 
   #  env: test
