k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: dev
spec:
  replicas: 3
  strategy: #更新策略 
    #type: Recreate #重建更新策略
    type: RollingUpdate
    rollingUpdate:
       maxUnavailable: 30%
       maxSurge: 30%
  selector:
    matchLabels:
       app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.18
        ports:
        - name: nginx-port
          containerPort: 80
