k8s/ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds-nginx
  namespace: dev
spec:
  selector:
    matchLabels:
       app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.18
