k8s/pod-base.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pod-base
   namespace: dev
   labels:
     version: "2.0"
spec:
   containers:
   - name: nginx
     imagePullPolicy: IfNotPresent
     image: nginx:1.17.2
     ports:
     - name: nginx-port  #端口名称，pod中唯一
       containerPort: 80 #容器监听的端口
       protocol: TCP     #协议
     resources: #资源配额
       limits: #资源限制（上限）
         cpu: "2" # CPU限制，单位core
         memory: "10Gi" # 限制
       requests: #请求资源
         cpu: "1"
         memory: "100Mi" 
   - name: busybox
     image: busybox:1.30
     command: ["/bin/sh","-c","touch /tmp/hello.txt;while true;do /bin/echo $(date +%F) >> /tmp/hello.txt;sleep 3; done;"]
     env: #设置环境变量
     - name: "username"
       value: "admin"
   #nodeSelector: 
   #  env: test
   tolerations:   #添加容忍
   - key: "tag"   #要容忍的污点的key
     operator: "Equal" #操作符
     value: "study"    #容忍的污点的value
     effect: "NoExecute"  #添加容忍的规则，这里必须和标记的污点规则相同
