k8s/pod-hook-exec.yaml
apiVersion: v1
kind: Pod
metadata:
    name: pod-hook-exec
    namespace: dev
spec:
    containers:
    - name: nginx
      image: nginx:1.17.1
      ports:
      - name: nginx-port
        containerPort: 80
      lifecycle:
        postStart:
          exec:
            command: 
            - "/bin/sh"
            - "-c"
            - "echo postStart... > /usr/share/nginx/html/index.html"
        preStop:
           exec:
            command:
            - "/usr/sbin/nginx"
            - "-s"
            - "quit"
