k8s/pod-initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pod-initcontainer
   namespace: dev
spec:
   containers:
   - name: nginx
     imagePullPolicy: IfNotPresent
     image: nginx:1.17.2
     ports:
     - name: nginx-port
       containerPort: 80
