k8s/pod-liveness-tcpsocket.yaml
apiVersion: v1
kind: Pod
metadata:
    name: pod-liveness-tcpsocket
    namespace: dev
spec:
    containers:
    - name: nginx
      image: nginx:1.17.1
      ports:
      - name: nginx-port
        containerPort: 80
      livenessProbe:
        tcpSocket:
          port: 80
