k8s/pod-livenessProbe.yaml
apiVersion: v1
kind: Pod
metadata:
    name: pod-liveness-exec
    namespace: dev
spec:
    containers:
    - name: nginx
      image: nginx:1.17.1
      ports:
      - name: nginx-port
        containerPort: 80
      livenessProbe:
        exec:
          command: 
          - "/bin/cat"
          - "/tmp/hello"
