k8s/pod-restartpolicy.yaml
apiVersion: v1
kind: Pod
metadata:
    name: pod-restartpolicy
    namespace: dev
spec:
    containers:
    - name: nginx
      image: nginx:1.17.1
      ports:
      - name: nginx-port
        containerPort: 80
      livenessProbe:
        tcpSocket:
          port: 8090
    restartPolicy: Never #设置重启策略
