k8s/nginx.yaml
#apiVersion: extensions/v1beta1
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    run: nginx
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:   
      labels:
        run: nginx
    spec:
      containers:
      - image: nginx:1.18
        imagePullPolicy: IfNotPresent
        name: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: mydir
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: "0.3"
            memory: "100Mi"
      volumes:
      - name: mydir
        hostPath:
          path: /data
          type: Directory
